fix: z-index problem

--- a/src/styles/components/version.scss
+++ b/src/styles/components/version.scss
@@ -7,7 +7,7 @@
   @include mobile {
     padding-left: 1rem;
     padding-right: 1rem;
-    z-index: 1000;
+    z-index: 29;
   }
 
   .dropdown-trigger {
