--- a/src/styles/templates/doc.scss
+++ b/src/styles/templates/doc.scss
@@ -54,7 +54,7 @@ $navbar-height-mobile: 4.25rem; // 68px
     background: $B5;
     color: $B3;
     font-weight: bold;
-    z-index: 999;
+    z-index: 28;
 
     &:after {
       content: '';
